--- a/Streamlit_Deployment/requirements.txt
+++ b/Streamlit_Deployment/requirements.txt
@@ -15,6 +15,7 @@ streamlit==1.20.0
 submitit==1.4.6
 torch==1.13.1
 torchvision==0.14.1
+torch --upgrade
 git+https://github.com/facebookresearch/detectron2
 #detectron2==0.6
 #detectron2==0.1.3 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu101/torch1.5/index.html
