--- a/Streamlit_Deployment/requirements.txt
+++ b/Streamlit_Deployment/requirements.txt
@@ -1,20 +1,15 @@
 matplotlib==3.6.2
 numpy==1.23.4
-onnxruntime==1.15.1
-openai==0.27.8
-packaging==23.1
 pandas==1.5.3
 #Pillow==9.4.0
 Pillow==10.0.1
-protobuf==3.20.3
-pycocotools==2.0.7
-Requests==2.31.0
-scipy==1.11.2
 seaborn==0.12.2
-streamlit==1.20.0
-submitit==1.4.6
 torch
+streamlit
 torchvision==0.14.1
-git+https://github.com/facebookresearch/detectron2
+
+git+https://github.com/facebookresearch/detectron2.git@5aeb252b194b93dc2879b4ac34bc51a31b5aee13
+
+#git+https://github.com/facebookresearch/detectron2
 #detectron2==0.6
 #detectron2==0.1.3 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu101/torch1.5/index.html
