--- a/Streamlit_Deployment/requirements.txt
+++ b/Streamlit_Deployment/requirements.txt
@@ -8,7 +8,8 @@ torch
 streamlit
 torchvision==0.14.1
 
-git+https://github.com/facebookresearch/detectron2.git@5aeb252b194b93dc2879b4ac34bc51a31b5aee13
+git clone https://github.com/facebookresearch/detectron2.git
+python -m pip install -e detectron2
 
 #git+https://github.com/facebookresearch/detectron2
 #detectron2==0.6
