--- a/Streamlit_Deployment/requirements.txt
+++ b/Streamlit_Deployment/requirements.txt
@@ -4,7 +4,7 @@ pandas==1.5.3
 #Pillow==9.4.0
 Pillow==10.0.1
 seaborn==0.12.2
-torch
+torch-scatter -f https://data.pyg.org/whl/torch-1.13.0+cpu.html
 streamlit
 torchvision==0.14.1
 
