--- a/Streamlit_Deployment/requirements.txt
+++ b/Streamlit_Deployment/requirements.txt
@@ -7,9 +7,10 @@ seaborn==0.12.2
 torch-scatter -f https://data.pyg.org/whl/torch-1.13.0+cpu.html
 streamlit
 torchvision==0.14.1
+detectron2
 
-git clone https://github.com/facebookresearch/detectron2.git
-python -m pip install -e detectron2
+#git clone https://github.com/facebookresearch/detectron2.git
+#python -m pip install -e detectron2
 
 #git+https://github.com/facebookresearch/detectron2
 #detectron2==0.6
