--- a/Streamlit_Deployment/requirements.txt
+++ b/Streamlit_Deployment/requirements.txt
@@ -1,12 +1,15 @@
 matplotlib==3.6.2
 numpy==1.23.4
 pandas==1.5.3
+
 #Pillow==9.4.0
-Pillow==10.0.1
-seaborn==0.12.2
-torch-scatter -f https://data.pyg.org/whl/torch-1.13.0+cpu.html
-streamlit
+streamlit==1.20.0
+torch==1.13.1
 torchvision==0.14.1
+
+
+#Pillow==9.4.0
+
 detectron2
 
 #git clone https://github.com/facebookresearch/detectron2.git
