--- a/Streamlit_Deployment/requirements.txt
+++ b/Streamlit_Deployment/requirements.txt
@@ -7,10 +7,11 @@ streamlit==1.20.0
 torch==1.13.1
 torchvision==0.14.1
 
+git+https://github.com/facebookresearch/detectron2
 
 #Pillow==9.4.0
 
-detectron2
+#detectron2
 
 #git clone https://github.com/facebookresearch/detectron2.git
 #python -m pip install -e detectron2
