--- a/Streamlit_Deployment/requirements.txt
+++ b/Streamlit_Deployment/requirements.txt
@@ -2,10 +2,12 @@ matplotlib==3.6.2
 numpy==1.23.4
 pandas==1.5.3
 seaborn==0.11.2
-#Pillow==9.4.0
+Pillow==9.4.0
 streamlit==1.20.0
 torch==1.13.1
 torchvision==0.14.1
+opencv-python
+detectron2 @ git+https://github.com/facebookresearch/detectron2.git
 
 #git+https://github.com/facebookresearch/detectron2
 #detectron2==0.1.3 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu101/torch1.5/index.html
