--- a/Streamlit_Deployment/requirements.txt
+++ b/Streamlit_Deployment/requirements.txt
@@ -7,7 +7,18 @@ streamlit==1.20.0
 torch==1.13.1
 torchvision==0.14.1
 opencv-python
-detectron2 @ git+https://github.com/facebookresearch/detectron2.git
+
+# Use PyTorch CPU wheels
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+# torch==2.4.0
+# torchvision==0.19.0
+# opencv-python>=4.8
+pycocotools>=2.0.7 ; platform_system != "Windows"
+
+# Detectron2 prebuilt wheel matching torch==2.4 (CPU). The -f line lets pip find the wheel so it doesn't build from source.
+-f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch2.4/index.html
+detectron2
 
 #git+https://github.com/facebookresearch/detectron2
 #detectron2==0.1.3 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu101/torch1.5/index.html
