--- a/Streamlit_Deployment/requirements.txt
+++ b/Streamlit_Deployment/requirements.txt
@@ -4,21 +4,17 @@ pandas==1.5.3
 seaborn==0.11.2
 Pillow==9.4.0
 streamlit==1.20.0
+
+# PyTorch CPU wheels first
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch==1.13.1
 torchvision==0.14.1
-opencv-python
 
-# Use PyTorch CPU wheels
---extra-index-url https://download.pytorch.org/whl/cpu
-
-# torch==2.4.0
-# torchvision==0.19.0
-# opencv-python>=4.8
+opencv-python>=4.8
 pycocotools>=2.0.7 ; platform_system != "Windows"
 
-# Detectron2 prebuilt wheel matching torch==2.4 (CPU). The -f line lets pip find the wheel so it doesn't build from source.
--f https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch2.4/index.html
-detectron2
+# Detectron2 wheel: use a DIRECT file URL (avoids 403 on index pages)
+detectron2 @ https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.13/detectron2-0.6-cp39-cp39-linux_x86_64.whl
 
 #git+https://github.com/facebookresearch/detectron2
 #detectron2==0.1.3 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu101/torch1.5/index.html
