--- a/Streamlit_Deployment/requirements.txt
+++ b/Streamlit_Deployment/requirements.txt
@@ -14,7 +14,7 @@ opencv-python>=4.8
 pycocotools>=2.0.7 ; platform_system != "Windows"
 
 # Detectron2 wheel: use a DIRECT file URL (avoids 403 on index pages)
-detectron2 @ https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.13/detectron2-0.6-cp39-cp39-linux_x86_64.whl
+#detectron2 @ https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.13/detectron2-0.6-cp39-cp39-linux_x86_64.whl
 
 #git+https://github.com/facebookresearch/detectron2
 #detectron2==0.1.3 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu101/torch1.5/index.html
