--- a/Streamlit_Deployment/requirements.txt
+++ b/Streamlit_Deployment/requirements.txt
@@ -13,6 +13,8 @@ torchvision==0.14.1
 opencv-python>=4.8
 pycocotools>=2.0.7 ; platform_system != "Windows"
 
+detectron2 @ ./wheels/detectron2-0.6-cp39-cp39-linux_x86_64.whl
+
 # Detectron2 wheel: use a DIRECT file URL (avoids 403 on index pages)
 #detectron2 @ https://dl.fbaipublicfiles.com/detectron2/wheels/cpu/torch1.13/detectron2-0.6-cp39-cp39-linux_x86_64.whl
 
