--- a/Streamlit_Deployment/requirements.txt
+++ b/Streamlit_Deployment/requirements.txt
@@ -9,8 +9,11 @@ streamlit==1.20.0
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==1.13.1
 torchvision==0.14.1
-opencv-python>=4.8
+# opencv-python>=4.8
 pycocotools>=2.0.7 ; platform_system != "Windows"
+
+# Use headless OpenCV on Linux containers
+opencv-python-headless==4.12.0.88
 
 # If your logs show the req file at /mount/src/DETR/Streamlit_Deployment/requirements.txt:
 detectron2 @ file:///mount/src/detr/Streamlit_Deployment/wheels/detectron2-0.6-cp39-cp39-linux_x86_64.whl
